fixed issue with zindex on mobile

--- a/static/style.css
+++ b/static/style.css
@@ -121,7 +121,8 @@ footer{
   height: 100%;
   display: none;
   transform: scale(0);
-  z-index: 2;
+  z-index: 100;
+  pointer-events: none;
 }
 .loaded #projects{
   display: block;
@@ -138,11 +139,13 @@ footer{
   overflow: hidden;
   overflow-y: auto;
   display: none;
-  z-index: 10000;
+  z-index: 1;
 }
 #scroller div{
   height: 500vh;
   width: 100%;
+  pointer-events: none;
+  z-index: 10000;
 
 }
 .projectsActive #scroller{
@@ -198,7 +201,7 @@ footer{
   header,footer{
     left: 0.5em;
     width: calc(100% - 1em);
-    z-index: 1;
+    z-index: 2;
   }
   header{
     height: 2.3em;
